<resources>
    <string name="app_name">TCS</string>
    <string name="up">up</string>
    <string name="down">down</string>
    <string name="left">left</string>
    <string name="right">right</string>
    <string name="rank">rank</string>
    <string name="ok">ok</string>
    <string name="tv_username">username</string>
    <string name="tv_score">score</string>
    <string name="easy">easy</string>
    <string name="normal">normal</string>
    <string name="difficult">difficult</string>
    <string name="select">Please select the mode you want：</string>

</resources>
