<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:ignore="MissingConstraints">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="请选择你想要的模式"></TextView>
    <Button
        android:id="@+id/btn_easy"
        android:layout_width="420dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:text="@string/easy"
        android:textColor="#fff"
        android:background="@drawable/bg_diretion"/>
    <Button
        android:id="@+id/btn_normal"
        android:layout_width="420dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:text="@string/normal"
        android:textColor="#fff"
        android:background="@drawable/bg_diretion"/>
    <Button
        android:id="@+id/btn_difficult"
        android:layout_width="420dp"
        android:layout_height="match_parent"
        android:layout_weight="1.0"
        android:text="@string/difficult"
        android:textColor="#fff"
        android:background="@drawable/bg_diretion"/>
</LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>