<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
              android:orientation="horizontal"
              android:gravity="center"
    android:layout_height="match_parent" >

    <com.jl.tcs.TcsView
            android:id="@+id/tcs_22"
            android:layout_width="0dp"
            android:layout_margin="20dp"
            android:layout_height="match_parent"
            android:layout_weight="1.0"
            android:background="@drawable/bg_game"/>

    <LinearLayout
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="时间:" />
        <Chronometer
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:format="%s"
                android:id="@+id/timer"/>
        <ImageButton
            android:id="@+id/btn_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/ic_rank"/>

        <ImageButton
            android:id="@+id/btn_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="180dp"
            android:layout_marginTop="0dp"
            android:src="@drawable/ic_setting" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="20dp"
            android:layout_marginLeft="20dp"
            android:layout_alignParentTop="true"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="得分:" />
            <TextView
                android:id="@+id/tv_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                />

        </LinearLayout>

        <RelativeLayout
                android:layout_width="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="0dp"
                android:layout_weight="0.6">

            <ImageButton
                android:id="@+id/btn_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:srcCompat="@mipmap/ic_restart" />
            <ImageButton
                android:id="@+id/btn_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                app:srcCompat="@drawable/ic_start" />
            <ImageButton
                android:id="@+id/btn_pause"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerVertical="true"
                android:layout_marginTop="15dp"
                android:visibility="invisible"
                app:srcCompat="@drawable/ic_pause" />


        </RelativeLayout>
        <LinearLayout
                android:layout_weight="0.9"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:gravity="center"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    >
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.0"
                        android:layout_height="match_parent"
                        android:textColor="#fff"
                        android:background="#00000000"/>
                <Button
                        android:id="@+id/btn_up"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:text="@string/up"
                        android:textColor="#fff"
                        android:background="@drawable/bg_diretion"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.0"
                        android:layout_height="match_parent"
                        android:textColor="#fff"
                        android:background="#00000000"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    android:orientation="horizontal">
                <Button
                        android:id="@+id/btn_left"
                        android:layout_width="0dp"
                        android:layout_weight="1.0"
                        android:text="@string/left"
                        android:layout_height="match_parent"
                        android:textColor="#fff"
                        android:background="@drawable/bg_diretion"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1.0"
                    android:layout_height="match_parent"
                    android:textColor="#fff"
                    android:background="#00000000"/>
                <Button
                        android:id="@+id/btn_right"
                        android:layout_width="0dp"
                        android:layout_weight="1.0"
                        android:text="@string/right"
                        android:layout_height="match_parent"
                        android:textColor="#fff"
                        android:background="@drawable/bg_diretion"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1.0"
                    >
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.0"
                        android:layout_height="match_parent"
                        android:textColor="#fff"
                        android:background="#00000000"/>
                <Button
                        android:id="@+id/btn_down"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1.0"
                        android:text="@string/down"
                        android:textColor="#fff"
                        android:background="@drawable/bg_diretion"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1.0"
                        android:layout_height="match_parent"
                        android:textColor="#fff"
                        android:background="#00000000"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>